--- a/TaskBomber/view/TaskView.fxml
+++ b/TaskBomber/view/TaskView.fxml
@@ -12,10 +12,10 @@
       <Label fx:id="commandLabel" layoutX="29.0" layoutY="37.0" text="Command:" />
       <ScrollPane layoutX="30.0" layoutY="73.0" prefHeight="410.0" prefWidth="543.0">
          <content>
-            <TableView prefHeight="407.0" prefWidth="541.0">
+            <TableView fx:id="taskTableView" prefHeight="407.0" prefWidth="541.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Task#" />
-                <TableColumn prefWidth="119.0" text="Task Name" />
+                <TableColumn fx:id="taskNumberColumn" prefWidth="75.0" text="Task#" />
+                <TableColumn fx:id="taskNameColumn" prefWidth="119.0" text="Task Name" />
                   <TableColumn prefWidth="79.0" text="Start Time" />
                   <TableColumn prefWidth="83.0" text="End Time" />
                   <TableColumn prefWidth="101.0" text="Priority" />
