--- a/src/TaskView.fxml
+++ b/src/TaskView.fxml
@@ -8,8 +8,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TaskViewController">
    <children>
-      <TextField fx:id="txtCommandInput" layoutX="99.0" layoutY="31.0" onKeyPressed="#enterCommand" prefHeight="27.0" prefWidth="474.0" promptText="Enter Your Cammand" />
-
+      <TextField fx:id="txtCommandInput" layoutX="99.0" layoutY="31.0" onKeyPressed="#passCommand" prefHeight="27.0" prefWidth="474.0" promptText="Enter Your Cammand" />
       <Label fx:id="commandLabel" layoutX="29.0" layoutY="37.0" text="Command:" />
       <ScrollPane layoutX="30.0" layoutY="73.0" prefHeight="410.0" prefWidth="543.0">
          <content>
@@ -17,9 +16,9 @@
               <columns>
                 <TableColumn fx:id="taskNumberColumn" prefWidth="75.0" text="Task#" />
                 <TableColumn fx:id="taskNameColumn" prefWidth="119.0" text="Task Name" />
-                <TableColumn fx:id="startTimeColumn" prefWidth="79.0" text="Start Time" />
-                  <TableColumn fx:id="endTimeColumn" prefWidth="83.0" text="End Time" />
-                  <TableColumn fx:id="priority" prefWidth="101.0" text="Priority" />
+                  <TableColumn prefWidth="79.0" text="Start Time" />
+                  <TableColumn prefWidth="83.0" text="End Time" />
+                  <TableColumn prefWidth="101.0" text="Priority" />
               </columns>
             </TableView>
          </content>
