--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
+<AnchorPane prefHeight="600.0" prefWidth="730.0" styleClass="background" stylesheets="@Skin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
    <children>
-      <TextField fx:id="txtCommandInput" layoutX="99.0" layoutY="31.0" onKeyPressed="#enterCommand" prefHeight="27.0" prefWidth="614.0" promptText="Enter Your Cammand" />
-      <Label fx:id="commandLabel" layoutX="29.0" layoutY="37.0" text="Command:" />
-      <ScrollPane layoutX="30.0" layoutY="73.0" prefHeight="400.0" prefWidth="684.0">
-         <content>
-            <TableView fx:id="taskTableView" prefHeight="400.0" prefWidth="668.0">
-              <columns>
-                <TableColumn fx:id="taskNumberColumn" prefWidth="63.0" text="Task#" />
-                <TableColumn fx:id="taskNameColumn" prefWidth="261.0" text="Task Name" />
-                  <TableColumn fx:id="startTimeColumn" prefWidth="125.0" text="Start Time" />
-                  <TableColumn fx:id="endTimeColumn" prefWidth="119.0" text="End Time" />
-                  <TableColumn fx:id="priority" prefWidth="99.0" text="Priority" />
-              </columns>
-            </TableView>
-         </content>
-      </ScrollPane>
-      <TextArea layoutX="31.0" layoutY="498.0" prefHeight="49.0" prefWidth="684.0" />
+      <TextField fx:id="txtCommandInput" layoutX="108.0" layoutY="35.0" onKeyPressed="#enterCommand" prefHeight="32.0" prefWidth="605.0" promptText="Enter Your Cammand" />
+      <Label layoutX="11.0" layoutY="40.0" text="Command:">
+         <font>
+            <Font name="Apple SD Gothic Neo Regular" size="18.0" />
+         </font></Label>
+      <TableView fx:id="taskTableView" layoutX="264.0" layoutY="89.0" prefHeight="422.0" prefWidth="448.0">
+        <columns>
+          <TableColumn fx:id="taskNumberColumn" prefWidth="59.0" text="Task#" />
+          <TableColumn fx:id="taskNameColumn" prefWidth="139.0" text="Task Name" />
+            <TableColumn fx:id="startTimeColumn" prefWidth="88.03018188476562" text="Start Time" />
+            <TableColumn fx:id="endTimeColumn" minWidth="0.0" prefWidth="80.85418701171875" text="End Time" />
+            <TableColumn fx:id="priority" prefWidth="67.0" text="Priority" />
+        </columns>
+      </TableView>
+      <Label layoutX="33.0" layoutY="547.0" prefHeight="16.0" prefWidth="683.0" text="This is the feedback for an operation. " />
+      <TableView fx:id="todayTasksView" layoutX="14.0" layoutY="88.0" prefHeight="422.0" prefWidth="237.0">
+        <columns>
+          <TableColumn prefWidth="236.0" text="Today's Tasks: " />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
