--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -17,7 +17,7 @@
          </font></Label>
       <TableView fx:id="taskTableView" layoutX="316.0" layoutY="89.0" prefHeight="718.0" prefWidth="1354.0">
         <columns>
-          <TableColumn fx:id="taskNumberColumn" prefWidth="138.0" text="Task#" />
+          <TableColumn fx:id="taskNumberColumn" prefWidth="48.0" text="#" />
           <TableColumn fx:id="taskNameColumn" prefWidth="345.0" text="Task Name" />
             <TableColumn fx:id="startTimeColumn" prefWidth="343.0" text="Start Time" />
             <TableColumn fx:id="endTimeColumn" minWidth="0.0" prefWidth="325.0" text="End Time" />
