--- a/src/gui/Skin.css
+++ b/src/gui/Skin.css
@@ -1,14 +1,19 @@
+@font-face {
+	font-family: Bree;
+    src: url(BreeSerif-Regular.otf);
+}
+
 .background {
-    -fx-background-color: #FFFAFA;
+    -fx-background-color: #feb914;
 }
 
 .label {
-	-fx-background-color: #FFFAF0;
-    -fx-font-size: 20.0pt;
+	-fx-background-color: #feb914;
+    -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
     -fx-font-family: "Segoe UI Semibold";
     -fx-text-fill: black;
-    -fx-opacity:0.6;
+    -fx-opacity:1;
 }
 
 
@@ -27,6 +32,7 @@
 	-fx-background-color: #FFFAF0;
     -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
+    -fx-text-fill: #ef4136 ;
     -fx-font-family: "Segoe UI Semibold";
     -fx-text-fill: black;
     -fx-opacity:0.6;
@@ -50,19 +56,23 @@
         derive(-fx-base, 80.0%) 
         transparent;
     -fx-border-insets: 0.0 10.0 1.0 0.0;
+    -fx-text-fill: #ef4136;
 }
 
 .table-view:focused .table-row-cell:filled:focused:selected {
-    -fx-background-color: #FFDAB9;
+    -fx-background-color: #ef4136 ;
+    -fx-text-fill: #FFFFFF;
 }
 
 .table-view:focused .table-row-cell:filled:hover {
     -fx-background-color: #FFDAB9;
+    -fx-text-fill: #FFFFFF;
 }
 
 .text-field {
     -fx-font-size: 30.0pt;
     -fx-border-color: #FFDEAD;
-    -fx-background-color: #FFFAF0;
+    -fx-text-fill: #FFFFFF;
+    -fx-background-color: #ef4136;
     -fx-font-family: "Segoe UI Semibold";
 }
