--- a/src/gui_Windows/TaskView.fxml
+++ b/src/gui_Windows/TaskView.fxml
@@ -10,12 +10,12 @@
 
 <AnchorPane prefHeight="880.0" prefWidth="1700.0" styleClass="background" stylesheets="@Skin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
    <children>
-      <TextField fx:id="txtCommandInput" layoutX="342.0" layoutY="33.0" onKeyPressed="#enterCommand" prefHeight="34.0" prefWidth="1286.0" promptText="Enter Your Cammand" />
-      <Label layoutX="23.0" layoutY="32.0" prefHeight="38.0" prefWidth="199.0" text="Command:">
+      <TextField fx:id="txtCommandInput" layoutX="256.0" layoutY="23.0" onKeyPressed="#enterCommand" prefHeight="34.0" prefWidth="1414.0" promptText="Enter Your Command" />
+      <Label layoutX="28.0" layoutY="40.0" prefHeight="38.0" prefWidth="199.0" text="Command:">
          <font>
             <Font name="Apple SD Gothic Neo Regular" size="18.0" />
          </font></Label>
-      <TableView fx:id="taskTableView" layoutX="316.0" layoutY="129.0" prefHeight="658.0" prefWidth="1354.0">
+      <TableView fx:id="taskTableView" layoutX="316.0" layoutY="139.0" prefHeight="658.0" prefWidth="1354.0">
         <columns>
           <TableColumn fx:id="taskNumberColumn" prefWidth="48.0" text="#" />
           <TableColumn fx:id="taskNameColumn" prefWidth="345.0" text="Task Name" />
@@ -24,8 +24,8 @@
             <TableColumn fx:id="priority" prefWidth="180.0" text="Priority" />
         </columns>
       </TableView>
-      <Label layoutX="20.0" layoutY="828.0" prefHeight="32.0" prefWidth="900.0" text="This is the feedback for an operation. " />
-      <ListView fx:id="todayTasksView" layoutX="28.0" layoutY="140.0" prefHeight="487.0" prefWidth="276.0" />
-      <Label layoutX="28.0" layoutY="89.0" prefHeight="21.0" prefWidth="270.0" text="Today's Tasks" />
+      <Label layoutX="28.0" layoutY="808.0" prefHeight="32.0" prefWidth="900.0" text="This is the feedback for an operation. " />
+      <ListView fx:id="todayTasksView" layoutX="28.0" layoutY="210.0" prefHeight="585.0" prefWidth="276.0" />
+      <Label layoutX="28.0" layoutY="139.0" prefHeight="21.0" prefWidth="270.0" text="Today's Tasks" />
    </children>
 </AnchorPane>
