--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -11,7 +11,7 @@
 <AnchorPane prefHeight="880.0" prefWidth="1700.0" styleClass="background" stylesheets="@Skin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
    <children>
       <TextField fx:id="txtCommandInput" layoutX="256.0" layoutY="33.0" onKeyPressed="#enterCommand" prefHeight="34.0" prefWidth="1414.0" promptText="Enter Your Command" />
-      <Label layoutX="28.0" layoutY="40.0" prefHeight="38.0" prefWidth="199.0" text="Command:">
+      <Label layoutX="28.0" layoutY="40.0" prefHeight="38.0" prefWidth="199.0" text="Command:" textFill="#ef4136">
          <font>
             <Font name="Apple SD Gothic Neo Regular" size="18.0" />
          </font></Label>
@@ -26,6 +26,6 @@
       </TableView>
       <Label layoutX="28.0" layoutY="808.0" prefHeight="32.0" prefWidth="900.0" text="This is the feedback for an operation. " />
       <ListView fx:id="todayTasksView" layoutX="28.0" layoutY="200.0" prefHeight="585.0" prefWidth="276.0" />
-      <Label layoutX="28.0" layoutY="129.0" prefHeight="21.0" prefWidth="270.0" text="Today's Tasks" />
+      <Label layoutX="28.0" layoutY="129.0" prefHeight="21.0" prefWidth="270.0" text="Today's Tasks" textFill="#ef4136" />
    </children>
 </AnchorPane>
