Changed a font for text

--- a/src/gui/Skin.css
+++ b/src/gui/Skin.css
@@ -1,5 +1,6 @@
 @font-face {
     src: url(BreeSerif-Regular.otf);
+    src: url(BRLNSR.TTF);
 }
 
 .background {
@@ -21,8 +22,8 @@
     -fx-control-inner-background:#FFFFFF;
     -fx-background-color: #FFFAF0;
     -fx-border-color: #feb914;
-    -fx-font-family: "Bree Serif";
-    -fx-font-size: 30.0pt;
+    -fx-font-family: "Berlin Sans FB";
+    -fx-font-size: 50.0pt;
     -fx-table-cell-border-color: #feb914;
     -fx-table-header-border-color: #feb914;
     -fx-padding: 5.0;
@@ -32,7 +33,6 @@
 	-fx-background-color: #FFFAF0;
     -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
-    -fx-text-fill: #ef4136 ;
     -fx-font-family: "Bree Serif";
     -fx-text-fill: black;
     -fx-opacity:0.6;
