--- a/src/gui_Windows/Skin.css
+++ b/src/gui_Windows/Skin.css
@@ -21,7 +21,7 @@
     -fx-control-inner-background:#FFFFFF;
     -fx-background-color: #FFFAF0;
     -fx-border-color: #feb914;
-    -fx-font-family: "Bree Serif";
+    -fx-font-family: "Berlin Sans FB";
     -fx-font-size: 30.0pt;
     -fx-table-cell-border-color: #feb914;
     -fx-table-header-border-color: #feb914;
