--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -8,22 +8,24 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="692.0" prefWidth="1253.0" styleClass="background" stylesheets="@Skin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
+<AnchorPane prefHeight="880.0" prefWidth="1700.0" styleClass="background" stylesheets="@Skin.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TaskViewController">
    <children>
-      <TextField fx:id="txtCommandInput" layoutX="246.0" layoutY="21.0" onKeyPressed="#enterCommand" prefHeight="89.0" prefWidth="982.0" promptText="Enter Your Command" />
+      <TextField fx:id="txtCommandInput" layoutX="256.0" layoutY="23.0" onKeyPressed="#enterCommand" prefHeight="34.0" prefWidth="1414.0" promptText="Enter Your Command" />
       <Label layoutX="28.0" layoutY="40.0" prefHeight="38.0" prefWidth="199.0" text="Command:">
          <font>
             <Font name="Apple SD Gothic Neo Regular" size="18.0" />
          </font></Label>
-      <TableView fx:id="taskTableView" layoutX="29.0" layoutY="136.0" prefHeight="485.0" prefWidth="1201.0">
+      <TableView fx:id="taskTableView" layoutX="316.0" layoutY="139.0" prefHeight="658.0" prefWidth="1354.0">
         <columns>
-          <TableColumn fx:id="taskNumberColumn" prefWidth="71.72005081176758" text="#" />
-          <TableColumn fx:id="taskNameColumn" prefWidth="394.29736328125" text="Task Name" />
-            <TableColumn fx:id="startTimeColumn" minWidth="8.5135498046875" prefWidth="280.70263671875" text="Start Time" />
-            <TableColumn fx:id="endTimeColumn" minWidth="0.0" prefWidth="278.6033935546875" text="End Time" />
-            <TableColumn fx:id="priority" prefWidth="168.3966064453125" text="Priority" />
+          <TableColumn fx:id="taskNumberColumn" prefWidth="48.0" text="#" />
+          <TableColumn fx:id="taskNameColumn" prefWidth="345.0" text="Task Name" />
+            <TableColumn fx:id="startTimeColumn" prefWidth="343.0" text="Start Time" />
+            <TableColumn fx:id="endTimeColumn" minWidth="0.0" prefWidth="400.0" text="End Time" />
+            <TableColumn fx:id="priority" prefWidth="180.0" text="Priority" />
         </columns>
       </TableView>
-      <Label layoutX="28.0" layoutY="630.0" prefHeight="33.0" prefWidth="900.0" text="This is the feedback for an operation. " />
+      <Label layoutX="28.0" layoutY="808.0" prefHeight="32.0" prefWidth="900.0" text="This is the feedback for an operation. " />
+      <ListView fx:id="todayTasksView" layoutX="28.0" layoutY="210.0" prefHeight="585.0" prefWidth="276.0" />
+      <Label layoutX="28.0" layoutY="139.0" prefHeight="21.0" prefWidth="270.0" text="Today's Tasks" />
    </children>
 </AnchorPane>
