--- a/src/gui_Windows/gui/Skin.css
+++ b/src/gui_Windows/gui/Skin.css
@@ -1,5 +1,6 @@
 @font-face {
     src: url(BreeSerif-Regular.otf);
+    src: url(BRLNSR.TTF);
 }
 
 .background {
@@ -32,7 +33,6 @@
 	-fx-background-color: #FFFAF0;
     -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
-    -fx-text-fill: #ef4136 ;
     -fx-font-family: "Bree Serif";
     -fx-text-fill: black;
     -fx-opacity:0.6;
