--- a/src/gui/Skin.css
+++ b/src/gui/Skin.css
@@ -1,6 +1,11 @@
 @font-face {
+	font-family: BreeSerif;
     src: url(BreeSerif-Regular.otf);
-    src: url(BRLNSR.TTF);
+}
+
+@font-face {
+	font-family: Berlnsr;
+	 src: url(BRLNSR.TTF);
 }
 
 .background {
@@ -11,7 +16,7 @@
 	-fx-background-color: #feb914;
     -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
-    -fx-font-family: "Bree Serif";
+    -fx-font-family: "Bree Serif", BreeSerif;
     -fx-text-fill: black;
     -fx-opacity:1;
 }
@@ -22,7 +27,7 @@
     -fx-control-inner-background:#FFFFFF;
     -fx-background-color: #FFFAF0;
     -fx-border-color: #feb914;
-    -fx-font-family: "Berlin Sans FB";
+    -fx-font-family: "Berlin Sans FB", Berlnsr;
     -fx-font-size: 30.0pt;
     -fx-table-cell-border-color: #feb914;
     -fx-table-header-border-color: #feb914;
@@ -33,7 +38,7 @@
 	-fx-background-color: #FFFAF0;
     -fx-font-size: 30.0pt;
     -fx-font-weight: bold;
-    -fx-font-family: "Bree Serif";
+    -fx-font-family: "Bree Serif", BreeSerif;
     -fx-text-fill: black;
     -fx-opacity:0.6;
 }
@@ -68,9 +73,9 @@
 }
 
 .text-field {
-    -fx-font-size: 30.0pt;
+    -fx-font-size: 25.0pt;
     -fx-border-color: #FFDEAD;
     -fx-text-fill: #FFFFFF;
     -fx-background-color: #ef4136 ;
-    -fx-font-family: "Bree Serif";
+    -fx-font-family: "Bree Serif", BreeSerif;
 }
