--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
@@ -25,5 +26,6 @@
         </columns>
       </TableView>
       <Label layoutX="27.0" layoutY="592.0" prefHeight="32.0" prefWidth="900.0" text="This is the feedback for an operation. " />
+      <ImageView fitHeight="519.0" fitWidth="1205.0" layoutX="25.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
