--- a/src/gui/TaskView.fxml
+++ b/src/gui/TaskView.fxml
@@ -26,7 +26,7 @@
         </columns>
       </TableView>
       <ImageView fitHeight="519.0" fitWidth="1205.0" layoutX="25.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
-      <Text layoutX="29.0" layoutY="634.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This is the feedback for the operation." wrappingWidth="1199.6738948822021">
+      <Text fx:id="feedback" layoutX="29.0" layoutY="634.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This is the feedback for the operation." wrappingWidth="1199.6738948822021">
          <font>
             <Font name="Bree Serif" size="37.0" />
          </font>
